# vmms-webapp

./: .coverage  README.md  app.py  checklist.md  coverage.xml  product.py  pyproject.toml  sonar-project.properties  vending_machine.py
.github/workflows/: python-tests.yml
database/: database_service.py  utils.py  vending_machine.db
models/: product.py  stock.py  vending_machine.py
src/vmms-webapp/: app.py
src/vmms-webapp/database/: vending_machine.db
src/vmms-webapp/models/: vending_machine.py
src/vmms-webapp/templates/: add.html
src/vmms_webapp/: app.py
src/vmms_webapp/database/: database_service.py  utils.py  vending_machine.db
src/vmms_webapp/models/: base.py  product.py  stock.py  vending_machine.py
src/vmms_webapp/templates/: base.html  index.html  update.html
templates/: add.html  base.html  index.html  update.html
tests/: .coverage  conftest.py  coverage.xml  test_api_add_product_stock.py  test_api_add_vending_machine.py  test_api_delete_product_stock.py  test_api_delete_vending_machine.py  test_api_update_product_stock.py  test_api_update_vending_machine.py  test_utils.py
tests/apis/: test_api_add_product_stock.py  test_api_add_vending_machine.py  test_api_delete_product_stock.py  test_api_delete_vending_machine.py  test_api_update_product_stock.py  test_api_update_vending_machine.py
