[tool.poetry]
name = "vmms-webapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "vmms_webapp" }]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
