[tool.poetry]
name = "vmms-webapp"
version = "0.1.0"
description = ""
authors = ["DrNattapoom <nattapoom.dr@gmail.com>"]
readme = "README.md"
packages = [{ include = "vmms_webapp" }]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.1"
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8 = "^5.0.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:cov_html",
    "--cov-branch"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
